fixing light dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
   }
 }
 
+
 .App-header {
   background-color: var(--body_background);
   min-height: 100vh;
@@ -23,7 +24,14 @@
   color: var(--body_color);
 }
 
+.header-text {
+  color: var(--body_color);
+}
 
+.input-search {
+  background-color: var(--body_background);
+  color: var(--body_color);
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
