--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,7 @@
     --body_color: white;
 }
 
+* {
+    transition: all 0.1s ease-in-out;
+}
+
